--- a/docker/ubuntu20-ci/Dockerfile_l0
+++ b/docker/ubuntu20-ci/Dockerfile_l0
@@ -10,7 +10,7 @@ RUN apt update && \
       git micro autoconf automake libtool make libreadline-dev texinfo \
       pkg-config libpam0g-dev libjson-c-dev bison flex python3-pip \
       libc-ares-dev python3-dev python3-sphinx \
-      install-info build-essential libsnmp-dev perl \
+      install-info build-essential libsnmp-dev perl telnet openssh-server \
       libcap-dev python2 libelf-dev \
       sudo gdb curl iputils-ping time \
       lua5.3 liblua5.3-dev \      
@@ -63,15 +63,15 @@ RUN cd && ls -al && ls -al frr
 # TODO build in release mode --release
 
 # FROM libyang AS quic_install
-RUN cd && pwd && ls -al && \
-    curl https://sh.rustup.rs -sSf | sh -s -- -y && \
-    export PATH="$HOME/.cargo/bin:$PATH" && \
-    cargo version && \
-    git clone --recursive https://github.com/cloudflare/quiche && \
-    cd quiche && \
-    cargo build && \
-    cd ~ && cd quiche/target/debug && pwd && ls -al && \
-    sudo install $(ls -1 *.so *.a) /home/frr/frr/bgpd/quic/lib
+# RUN cd && pwd && ls -al && \
+#    curl https://sh.rustup.rs -sSf | sh -s -- -y && \
+#    export PATH="$HOME/.cargo/bin:$PATH" && \
+#    cargo version && \
+#    git clone --recursive https://github.com/cloudflare/quiche && \
+#    cd quiche && \
+#    cargo build && \
+#    cd ~ && cd quiche/target/debug && pwd && ls -al && \
+#    sudo install $(ls -1 *.so *.a) /home/frr/frr/bgpd/quic/lib
 
 # FROM quic_install AS frr
 RUN cd ~/frr && \
