--- a/docker/ubuntu20-ci/Dockerfile_l0
+++ b/docker/ubuntu20-ci/Dockerfile_l0
@@ -15,7 +15,8 @@ RUN apt update && \
       sudo gdb curl iputils-ping time \
       lua5.3 liblua5.3-dev \      
       openvswitch-switch ssh \
-      net-tools iproute2 && \
+      net-tools iproute2 \
+      linux-generic && \
       curl https://bootstrap.pypa.io/pip/2.7/get-pip.py --output /tmp/get-pip.py && \
       python2 /tmp/get-pip.py && \
       rm -f  /tmp/get-pip.py && \
@@ -107,6 +108,13 @@ RUN 	cd ~/frr && \
 	sudo install -m 640 -o frr -g frr tools/etc/frr/frr.conf /etc/frr/frr.conf && \
 	sudo install -m 640 -o frr -g frr tools/etc/frr/daemons.conf /etc/frr/daemons.conf && \
 	sudo install -m 640 -o frr -g frr tools/etc/frr/daemons /etc/frr/daemons
+	
+
+# MPLS Setup
+RUN	cd ~/frr && \
+	sudo install -m 640 -o frr -g frr tools/etc/modules-load.d/modules.conf /etc/modules-load.d/modules.conf && \
+	sudo modprobe -S $(ls /lib/modules) mpls-router mpls-iptunnel && \
+	sudo install -m 640 -o frr -g frr tools/etc/sysctl.conf /etc/sysctl.conf
 
 RUN 	cd ~/frr && \
 	sudo install -m 644 tools/frr.service /etc/systemd/system/frr.service
