--- a/tests/topotests/bmp_benchmark_test/p1/bgpd.conf
+++ b/tests/topotests/bmp_benchmark_test/p1/bgpd.conf
@@ -1,5 +1,6 @@
 !
 router bgp 100
-  neighbor 192.168.1.1/24 remote-as 100
+  no bgp network import-check
+  neighbor 10.0.0.1 remote-as 100
 exit
 !
