added one vpn client ce (ce1) and vrf setup on uut + vpnv4 prefix update/withdraw on ce1->uut
Signed-off-by: Maxence Younsi <mx.yns@outlook.fr>

--- a/tests/topotests/bmp_benchmark_test/uut/bgpd.conf
+++ b/tests/topotests/bmp_benchmark_test/uut/bgpd.conf
@@ -1,5 +1,25 @@
 !
 router bgp 100
+  bgp default ipv4-vpn
+  no bgp ebgp-requires-policy
+  no bgp network import-check
   neighbor 10.0.0.2 remote-as 100
+  network 100.0.0.0/24
+exit
+!
+router bgp 100 vrf BLUE
+  no bgp ebgp-requires-policy
+  no bgp network import-check
+  neighbor 20.0.0.2 remote-as 200
+  network 101.0.0.0/24
+
+  address-family ipv4 unicast
+    neighbor 20.0.0.2 next-hop-self
+    label vpn export auto
+    rd vpn export 20.0.0.2:2
+    rt vpn export 20.0.0.2:2
+    export vpn
+  exit-address-family
+  !
 exit
 !
