--- a/tests/topotests/bmp_benchmark_test/p1/bgpd.conf
+++ b/tests/topotests/bmp_benchmark_test/p1/bgpd.conf
@@ -1,6 +1,8 @@
 !
-router bgp 100
+router bgp 101
   no bgp network import-check
-  neighbor 10.0.0.1 remote-as 100
+  no bgp ebgp-requires-policy
+  neighbor 10.1.0.1 remote-as 100
+  network 101.0.0.0/24
 exit
 !
