--- a/tests/topotests/bmp_benchmark_test/uut/zebra.conf
+++ b/tests/topotests/bmp_benchmark_test/uut/zebra.conf
@@ -1,5 +1,12 @@
 interface uut-eth0
-  ip address 10.0.0.1/24
-
+  ip address 10.1.0.1/24
+!
 interface uut-eth1
-  ip address 20.0.0.1/24
+  ip address 10.2.0.1/24
+!
+interface uut-eth2
+  ip address 20.0.1.1/24
+!
+interface uut-eth3
+  ip address 20.0.2.1/24
+!
