working benchmark base, still needs ram monitoring
changed timestamp from monotonic(NULL) to custom impl lml_time() (from second to nanosec precision)
added prefix_rd print function
edited dumping for VPNv4 in/out upd/wthdrw etc
added log record for ingress/outgress upd/wthdrw for IPv4/VPNv4 AFI/SAFI
added same-AS provider router for uut->prvdr1 VPNv4 route exchange

fixed config export

Signed-off-by: Maxence Younsi <mx.yns@outlook.fr>

--- a/tests/topotests/bmp_benchmark_test/uut/bgpd.conf
+++ b/tests/topotests/bmp_benchmark_test/uut/bgpd.conf
@@ -5,7 +5,8 @@ router bgp 100
   no bgp network import-check
   neighbor 10.1.0.2 remote-as 101
   neighbor 10.2.0.2 remote-as 102
-  network 100.0.0.0/24
+  neighbor 100.0.1.2 remote-as 100
+  network 100.0.69.0/24
 exit
 !
 router bgp 100 vrf BLUE
@@ -13,7 +14,7 @@ router bgp 100 vrf BLUE
   no bgp network import-check
   neighbor 20.0.1.2 remote-as 200
   neighbor 20.0.2.2 remote-as 200
-  network 100.0.1.0/24
+  network 100.0.69.0/24
 
   address-family ipv4 unicast
     neighbor 20.0.1.2 next-hop-self
