--- a/tests/topotests/bmp_benchmark_test/ce2/bgpd.conf
+++ b/tests/topotests/bmp_benchmark_test/ce2/bgpd.conf
@@ -3,6 +3,8 @@ router bgp 200
   no bgp ebgp-requires-policy
   no bgp network import-check
   neighbor 20.0.2.1 remote-as 100
+  neighbor 20.0.2.1 solo
+  neighbor 20.0.2.1 sender-as-path-loop-detection
   network 200.0.2.0/24
 exit
 !
