--- a/tests/topotests/bmp_benchmark_test/p1/bgpd.conf
+++ b/tests/topotests/bmp_benchmark_test/p1/bgpd.conf
@@ -3,6 +3,8 @@ router bgp 101
   no bgp network import-check
   no bgp ebgp-requires-policy
   neighbor 10.1.0.1 remote-as 100
+  neighbor 10.1.0.1 solo
+  neighbor 10.1.0.1 sender-as-path-loop-detection
   network 101.0.0.0/24
 exit
 !
