--- a/tests/topotests/bmp_benchmark_test/p2/bgpd.conf
+++ b/tests/topotests/bmp_benchmark_test/p2/bgpd.conf
@@ -3,6 +3,8 @@ router bgp 102
   no bgp ebgp-requires-policy
   no bgp network import-check
   neighbor 10.2.0.1 remote-as 100
+  neighbor 10.2.0.1 solo
+  neighbor 10.2.0.1 sender-as-path-loop-detection
   network 102.0.0.0/24
 exit
 !
