fixed memory usage, new barplot, fixed router config, added successful field
Signed-off-by: Maxence Younsi <mx.yns@outlook.fr>

--- a/tests/topotests/bmp_benchmark_test/prvdr1/bgpd.conf
+++ b/tests/topotests/bmp_benchmark_test/prvdr1/bgpd.conf
@@ -4,5 +4,8 @@ router bgp 100
   no bgp ebgp-requires-policy
   no bgp network import-check
   neighbor 100.0.1.1 remote-as 100
+  bmp targets targ
+    bmp listener 0.0.0.0 port 12345
+  exit
 exit
 !
