--- a/tests/topotests/bmp_benchmark_test/uut/bgpd.conf
+++ b/tests/topotests/bmp_benchmark_test/uut/bgpd.conf
@@ -8,7 +8,14 @@ router bgp 100
   neighbor 10.1.0.2 remote-as 101
   neighbor 10.2.0.2 remote-as 102
   neighbor 100.0.1.2 remote-as 100
-  network 100.0.69.0/24
+  bmp targets targ
+    bmp connect 100.0.1.2 port 12345 min-retry 100 max-retry 500
+    bmp mirror
+    bmp monitor ipv4 unicast post-policy
+    bmp monitor ipv4 vpn post-policy
+    bmp monitor ipv4 unicast loc-rib
+    bmp monitor ipv4 vpn loc-rib
+  exit
 exit
 !
 router bgp 100 vrf BLUE
@@ -16,7 +23,6 @@ router bgp 100 vrf BLUE
   no bgp network import-check
   neighbor 20.0.1.2 remote-as 200
   neighbor 20.0.2.2 remote-as 200
-  network 100.0.69.0/24
 
   address-family ipv4 unicast
     neighbor 20.0.1.2 next-hop-self
@@ -26,6 +32,16 @@ router bgp 100 vrf BLUE
     rt vpn export 20.0.2.2:2
     export vpn
   exit-address-family
+  !
+
+  bmp targets targ
+      bmp connect 100.0.1.2 port 12345 min-retry 100 max-retry 500
+      bmp mirror
+      bmp monitor ipv4 unicast post-policy
+      bmp monitor ipv4 vpn post-policy
+      bmp monitor ipv4 unicast loc-rib
+      bmp monitor ipv4 vpn loc-rib
+    exit
   !
 exit
 !
