renamed in/outgress to event_begin/end, fixed bgp suppress cancelling update msgs, added bgp dp no-op, added bgp session between utf vrf blue & prvdr1, saved plots to svg, switched to processes instead of threads bc GIL
Signed-off-by: Maxence Younsi <mx.yns@outlook.fr>

--- a/tests/topotests/bmp_benchmark_test/prvdr1/bgpd.conf
+++ b/tests/topotests/bmp_benchmark_test/prvdr1/bgpd.conf
@@ -9,3 +9,10 @@ router bgp 100
   exit
 exit
 !
+router bgp 100 vrf BLUE
+  bgp default ipv4-vpn
+  no bgp ebgp-requires-policy
+  no bgp network import-check
+  neighbor 100.0.2.1 remote-as 100
+exit
+!
