--- a/tests/topotests/bmp_benchmark_test/uut/bgpd.conf
+++ b/tests/topotests/bmp_benchmark_test/uut/bgpd.conf
@@ -1,13 +1,28 @@
 debug bgp updates
-debug bgp bestpath 42.0.0.0/24
+debug bgp bestpath 1.6.92.0/22
+!
+route-map permit_all permit 1
+exit
+!
+route-map deny_all deny 1
+exit
 !
 router bgp 100
   bgp default ipv4-vpn
-  no bgp ebgp-requires-policy
   no bgp network import-check
+  no bgp suppress-duplicates
   neighbor 10.1.0.2 remote-as 101
+  neighbor 10.1.0.2 route-map permit_all in
+  neighbor 10.1.0.2 route-map deny_all out
+
   neighbor 10.2.0.2 remote-as 102
+  neighbor 10.2.0.2 route-map permit_all in
+  neighbor 10.2.0.2 route-map deny_all out
+
   neighbor 100.0.1.2 remote-as 100
+  neighbor 100.0.1.2 route-map permit_all out
+  neighbor 100.0.1.2 route-map deny_all in
+
   bmp targets targ
     bmp connect 100.0.1.2 port 12345 min-retry 100 max-retry 500
     bmp mirror
@@ -19,10 +34,21 @@ router bgp 100
 exit
 !
 router bgp 100 vrf BLUE
-  no bgp ebgp-requires-policy
+  bgp default ipv4-vpn
   no bgp network import-check
+  no bgp suppress-duplicates
+
   neighbor 20.0.1.2 remote-as 200
+  neighbor 20.0.1.2 route-map permit_all in
+  neighbor 20.0.1.2 route-map deny_all out
+
   neighbor 20.0.2.2 remote-as 200
+  neighbor 20.0.2.2 route-map permit_all in
+  neighbor 20.0.2.2 route-map deny_all out
+
+  neighbor 100.0.2.2 remote-as 100
+  neighbor 100.0.2.2 route-map permit_all out
+  neighbor 100.0.2.2 route-map deny_all in
 
   address-family ipv4 unicast
     neighbor 20.0.1.2 next-hop-self
