preloaded prefixes into config, separated ipv4 and vpnv4 files
Signed-off-by: Maxence Younsi <mx.yns@outlook.fr>

--- a/tests/topotests/bmp_benchmark_test/routers/ce1/bgpd.conf
+++ b/tests/topotests/bmp_benchmark_test/routers/ce1/bgpd.conf
@@ -5,5 +5,7 @@ router bgp 200
   neighbor 20.0.1.1 remote-as 100
   neighbor 20.0.1.1 solo
   neighbor 20.0.1.1 sender-as-path-loop-detection
+
+### INIT_PREFIXES_PLACEHOLDER ###
 exit
 !
