--- a/tests/topotests/bmp_benchmark_test/routers/p1/bgpd.conf
+++ b/tests/topotests/bmp_benchmark_test/routers/p1/bgpd.conf
@@ -5,5 +5,7 @@ router bgp 101
   neighbor 10.1.0.1 remote-as 100
   neighbor 10.1.0.1 solo
   neighbor 10.1.0.1 sender-as-path-loop-detection
+
+### INIT_PREFIXES_PLACEHOLDER ###
 exit
 !
